@@ -9586,6 +9586,11 @@
   "game:handbook-mealingredient-fruitcandy": "candied fruit",
 
   "game:item-handbooktitle-fruitpress": "Fruitpress notes",
-  "game:item-handbooktext-fruitpress": "You can only use the fruit press if it is at LEAST half-full. Anything less and the press will not squish any material."
-  
+  "game:item-handbooktext-fruitpress": "You can only use the fruit press if it is at LEAST half-full. Anything less and the press will not squish any material.",
+
+
+  "item-washedeggshell": "Washed egg shells",
+  "itemdesc-washedeggshell": "Purified by water, ready for pressure.",
+  "item-handbooktitle-washedeggshell": "Washed Egg Shells",
+  "item-handbooktext-washedeggshell": "After being soaked, these egg shells have lost many nutrients. However, this loss has made it easier to grind the shells and utilize the lime left within."
 }   
