@@ -1,0 +1,265 @@
+{
+	"editor": {
+		"collapsedPaths": "Root/egg1,Root/Cube5,Root/Cube13,Root/Cube3,Root/Cube11,Root/Cube9,Root/Cube7,Root/egg8",
+		"allAngles": false,
+		"entityTextureMode": false
+	},
+	"textureWidth": 16,
+	"textureHeight": 16,
+	"textureSizes": {
+		"egg": [16,16]
+	},
+	"textures": {
+		"egg": "game:block/wood/henbox/egg"
+	},
+	"elements": [
+		{
+			"name": "egg1",
+			"from": [ 7.25, 0.0, 6.75 ],
+			"to": [ 9.25, 1.0, 8.75 ],
+			"rotationOrigin": [ 7.2, 0.0, 6.7 ],
+			"rotationY": -45.0,
+			"faces": {
+				"north": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+				"south": { "texture": "#egg", "uv": [ 12.0, 0.0, 14.0, 1.0 ] },
+				"west": { "texture": "#egg", "uv": [ 11.0, 2.0, 13.0, 3.0 ] },
+				"up": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] },
+				"down": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] }
+			},
+			"children": [
+				{
+					"name": "Cube2",
+					"from": [ -1.0, 0.0, -0.5 ],
+					"to": [ 1.0, 1.0, 1.5 ],
+					"rotationOrigin": [ 1.0, 0.0, -0.5 ],
+					"rotationY": 135.0,
+					"faces": {
+						"north": { "texture": "#egg", "uv": [ 12.0, 3.0, 14.0, 4.0 ] },
+						"east": { "texture": "#egg", "uv": [ 14.0, 3.0, 16.0, 4.0 ] },
+						"south": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+						"up": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] },
+						"down": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] }
+					}
+				}
+			]
+		},
+		{
+			"name": "egg2",
+			"from": [ 10.25, 0.0, 6.75 ],
+			"to": [ 12.25, 1.0, 8.75 ],
+			"rotationOrigin": [ 10.2, 0.0, 6.7 ],
+			"rotationY": -157.5,
+			"faces": {
+				"north": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+				"south": { "texture": "#egg", "uv": [ 12.0, 0.0, 14.0, 1.0 ] },
+				"west": { "texture": "#egg", "uv": [ 11.0, 2.0, 13.0, 3.0 ] },
+				"up": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] },
+				"down": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] }
+			},
+			"children": [
+				{
+					"name": "Cube4",
+					"from": [ 2.6, 0.0, -3.2 ],
+					"to": [ 4.6, 1.0, -1.2 ],
+					"rotationOrigin": [ 4.6, 0.0, -3.2 ],
+					"faces": {
+						"north": { "texture": "#egg", "uv": [ 12.0, 3.0, 14.0, 4.0 ] },
+						"east": { "texture": "#egg", "uv": [ 14.0, 3.0, 16.0, 4.0 ] },
+						"south": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+						"up": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] },
+						"down": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] }
+					}
+				}
+			]
+		},
+		{
+			"name": "egg3",
+			"from": [ 6.5, 0.0, 6.5 ],
+			"to": [ 8.5, 1.0, 8.5 ],
+			"rotationOrigin": [ 6.4, 0.0, 6.5 ],
+			"rotationY": 112.5,
+			"faces": {
+				"north": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+				"south": { "texture": "#egg", "uv": [ 12.0, 0.0, 14.0, 1.0 ] },
+				"west": { "texture": "#egg", "uv": [ 11.0, 2.0, 13.0, 3.0 ] },
+				"up": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] },
+				"down": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] }
+			},
+			"children": [
+				{
+					"name": "Cube6",
+					"from": [ -1.85, 0.0, -0.7 ],
+					"to": [ 0.15, 1.0, 1.3 ],
+					"rotationOrigin": [ 0.15, 0.0, -0.7 ],
+					"rotationX": -45.0,
+					"rotationY": -22.5,
+					"rotationZ": -22.5,
+					"faces": {
+						"north": { "texture": "#egg", "uv": [ 12.0, 3.0, 14.0, 4.0 ] },
+						"east": { "texture": "#egg", "uv": [ 14.0, 3.0, 16.0, 4.0 ] },
+						"south": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+						"up": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] },
+						"down": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] }
+					}
+				}
+			]
+		},
+		{
+			"name": "egg4",
+			"from": [ 8.7, 0.0, 8.5 ],
+			"to": [ 10.7, 1.0, 10.5 ],
+			"rotationOrigin": [ 8.7, 0.0, 9.5 ],
+			"rotationY": 90.0,
+			"rotationZ": 45.0,
+			"faces": {
+				"north": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+				"south": { "texture": "#egg", "uv": [ 12.0, 0.0, 14.0, 1.0 ] },
+				"west": { "texture": "#egg", "uv": [ 11.0, 2.0, 13.0, 3.0 ] },
+				"up": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] },
+				"down": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] }
+			},
+			"children": [
+				{
+					"name": "Cube8",
+					"from": [ -1.2, -0.8, 3.0 ],
+					"to": [ 0.8, 0.2, 5.0 ],
+					"rotationOrigin": [ 0.8, -0.8, 3.0 ],
+					"rotationX": -90.0,
+					"rotationY": -45.0,
+					"rotationZ": -90.0,
+					"faces": {
+						"north": { "texture": "#egg", "uv": [ 12.0, 3.0, 14.0, 4.0 ] },
+						"east": { "texture": "#egg", "uv": [ 14.0, 3.0, 16.0, 4.0 ] },
+						"south": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+						"up": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] },
+						"down": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] }
+					}
+				}
+			]
+		},
+		{
+			"name": "egg5",
+			"from": [ 6.75, 0.0, 10.5 ],
+			"to": [ 8.75, 1.0, 12.5 ],
+			"rotationOrigin": [ 6.7, 0.0, 10.5 ],
+			"rotationY": -157.5,
+			"faces": {
+				"north": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+				"south": { "texture": "#egg", "uv": [ 12.0, 0.0, 14.0, 1.0 ] },
+				"west": { "texture": "#egg", "uv": [ 11.0, 2.0, 13.0, 3.0 ] },
+				"up": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] },
+				"down": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] }
+			},
+			"children": [
+				{
+					"name": "Cube10",
+					"from": [ -2.4, 1.001, 0.3 ],
+					"to": [ -0.4, 2.001, 2.3 ],
+					"rotationOrigin": [ -0.4, 1.0, 0.3 ],
+					"rotationY": 45.0,
+					"faces": {
+						"north": { "texture": "#egg", "uv": [ 12.0, 3.0, 14.0, 4.0 ] },
+						"east": { "texture": "#egg", "uv": [ 14.0, 3.0, 16.0, 4.0 ] },
+						"south": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+						"up": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] },
+						"down": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] }
+					}
+				}
+			]
+		},
+		{
+			"name": "egg6",
+			"from": [ 10.15, 1.0002, 7.05 ],
+			"to": [ 12.15, 2.0002, 9.05 ],
+			"rotationOrigin": [ 10.1, 1.0, 7.0 ],
+			"rotationY": -135.0,
+			"faces": {
+				"north": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+				"south": { "texture": "#egg", "uv": [ 12.0, 0.0, 14.0, 1.0 ] },
+				"west": { "texture": "#egg", "uv": [ 11.0, 2.0, 13.0, 3.0 ] },
+				"up": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] },
+				"down": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] }
+			},
+			"children": [
+				{
+					"name": "Cube12",
+					"from": [ 0.0, 0.2, 1.2 ],
+					"to": [ 2.0, 1.2, 3.2 ],
+					"rotationOrigin": [ 2.0, 0.2, 1.2 ],
+					"rotationY": -135.0,
+					"rotationZ": 22.5,
+					"faces": {
+						"north": { "texture": "#egg", "uv": [ 12.0, 3.0, 14.0, 4.0 ] },
+						"east": { "texture": "#egg", "uv": [ 14.0, 3.0, 16.0, 4.0 ] },
+						"south": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+						"up": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] },
+						"down": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] }
+					}
+				}
+			]
+		},
+		{
+			"name": "egg7",
+			"from": [ 6.8, 1.0002, 5.95 ],
+			"to": [ 8.8, 2.0002, 7.95 ],
+			"rotationOrigin": [ 6.8, 1.0, 5.95 ],
+			"rotationX": -45.0,
+			"faces": {
+				"north": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+				"south": { "texture": "#egg", "uv": [ 12.0, 0.0, 14.0, 1.0 ] },
+				"west": { "texture": "#egg", "uv": [ 11.0, 2.0, 13.0, 3.0 ] },
+				"up": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] },
+				"down": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] }
+			},
+			"children": [
+				{
+					"name": "Cube14",
+					"from": [ 2.15, -0.9, -0.5 ],
+					"to": [ 4.15, 0.1, 1.5 ],
+					"rotationOrigin": [ 4.15, -0.9, -0.5 ],
+					"rotationX": 45.0,
+					"rotationZ": -45.0,
+					"faces": {
+						"north": { "texture": "#egg", "uv": [ 12.0, 3.0, 14.0, 4.0 ] },
+						"east": { "texture": "#egg", "uv": [ 14.0, 3.0, 16.0, 4.0 ] },
+						"south": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+						"up": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] },
+						"down": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] }
+					}
+				}
+			]
+		},
+		{
+			"name": "egg8",
+			"from": [ 8.05, 0.0, 11.85 ],
+			"to": [ 10.05, 1.0, 13.85 ],
+			"rotationOrigin": [ 8.0, 0.0, 11.8 ],
+			"rotationY": 112.5,
+			"rotationZ": 45.0,
+			"faces": {
+				"north": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+				"south": { "texture": "#egg", "uv": [ 12.0, 0.0, 14.0, 1.0 ] },
+				"west": { "texture": "#egg", "uv": [ 11.0, 2.0, 13.0, 3.0 ] },
+				"up": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] },
+				"down": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] }
+			},
+			"children": [
+				{
+					"name": "Cube3",
+					"from": [ 0.2, -0.7, -0.6 ],
+					"to": [ 2.2, 0.3, 1.4 ],
+					"rotationOrigin": [ 2.2, -0.7, -0.6 ],
+					"rotationX": -22.5,
+					"rotationY": -22.5,
+					"rotationZ": -45.0,
+					"faces": {
+						"north": { "texture": "#egg", "uv": [ 12.0, 3.0, 14.0, 4.0 ] },
+						"east": { "texture": "#egg", "uv": [ 14.0, 3.0, 16.0, 4.0 ] },
+						"south": { "texture": "#egg", "uv": [ 14.0, 1.0, 16.0, 2.0 ] },
+						"up": { "texture": "#egg", "uv": [ 14.0, 0.0, 16.0, 2.0 ] },
+						"down": { "texture": "#egg", "uv": [ 13.0, 0.0, 15.0, 2.0 ] }
+					}
+				}
+			]
+		}
+	]}
