@@ -1,0 +1,11 @@
+[
+  {
+    "code": "washedeggshell",
+    "sealHours": 0,
+    "ingredients": [
+      { "type": "item", "code": "waterportion",  "litres": 1 },
+      { "type": "item", "code": "aculinaryartillery:eggshell", "quantity": 8 }
+    ],
+    "output": { "type": "item", "code": "expandedfoods:washedeggshell", "stackSize": 1 }
+  }
+]
