@@ -116,7 +116,11 @@ MISC:
 - Soybean textures/shapes updated
 - Primitive survival patches reviewed
 - FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
-- Lime can be made by grinding a lot of eggshells
+- Eggshells can be turned into washed eggshells, which grind into lime at an 8:1 ratio - DONE!!!
+- use the new 'NutritionPropertiesPerLitreInMeal' stuff
+- Healing over time implemented for all items
+- Soulstorm Brew makes you psychedelic now?
+- Items can go into crocks? New labels for everything?
 
 
 
